Fix missing rtl Python package in LanguageTools extension

--- a/LanguageTools/CMakeLists.txt
+++ b/LanguageTools/CMakeLists.txt
@@ -4,6 +4,8 @@ set(MODULE_NAME LanguageTools)
 #-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
   ${MODULE_NAME}.py
+  rtl/__init__.py
+  rtl/RTLSupport.py
   )
 
 set(MODULE_PYTHON_RESOURCES
